# BackgammonCoach

BackgammonCoach/: BackgammonCoachApp.swift  ContentView.swift  Info.plist
BackgammonCoach.xcodeproj/: project.pbxproj
BackgammonCoach.xcodeproj/xcuserdata/christiandewey.xcuserdatad/xcschemes/: xcschememanagement.plist
BackgammonCoach/App/: BackgammonCoachApp.swift
BackgammonCoach/Engine/: GameEngine.swift  MoveGenerator.swift
BackgammonCoach/Models/: AnalysisModels.swift  BoardState.swift  MatchState.swift
BackgammonCoach/Services/: ClaudeAnalysisService.swift  GNUBgBridge.swift
BackgammonCoach/Settings/: AppSettings.swift
BackgammonCoach/Views/: BoardView.swift  GameUIComponents.swift  MatchAndAnalysisViews.swift  OnboardingView.swift  SettingsView.swift  TrendDashboardView.swift
BackgammonCoachTests/: BackgammonCoachTests.swift
gnubg-server/: Dockerfile  docker-compose.yml  pyproject.toml
gnubg-server/app/: main.py
